# philly-land-value-by-block

./: README.md  add_value_sqft_to_geojson.py  calcluate_value_sqft_by_block.py  pyproject.toml
data/: README.md
