[tool.poetry]
name = "opa"
version = "0.1.0"
description = ""
authors = ["nkt <nicholas.tulach@voteshield.us>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
